Add existing maintainer templates to handbook

--- a/sites/handbook/source/handbook/engineering/workflow/code-review/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/workflow/code-review/index.html.md.erb
@@ -69,7 +69,7 @@ Interested reviewers should check in regularly with their manager/mentor to disc
 
 After each review is complete, the reviewer should write up a justification about why they believe the merge request is ready to merge. This justification is then reviewed by the maintainer and if the maintainer agrees with the justification they should add a 👍 reaction to the comment, even if they have additional non-blocking comments. The maintainer should leave a comment highlighting any blocking concerns that were missed in the initial review.
 
-At any time, the manager/mentor may choose to open a merge request, adding the reviewer as a maintainer. This merge request should have a justification from the manager/mentor as to why the reviewer should become a maintainer. You are also welcome to open this merge request yourself at any time.
+At any time, the manager/mentor may choose to open a merge request, adding the reviewer as a maintainer. This merge request should have a justification from the manager/mentor as to why the reviewer should become a maintainer. You are also welcome to open this merge request yourself at any time. There are [merge request templates available](https://gitlab.com/gitlab-com/www-gitlab-com/-/tree/master/.gitlab/merge_request_templates) to help you with the content and steps.
 
 Before opening the merge request, the author should:
 
