--- a/source/direction/manage/workspace/index.html.md.erb
+++ b/source/direction/manage/workspace/index.html.md.erb
@@ -10,7 +10,7 @@ canonical_path: "/direction/manage/workspace/"
 
 ## The Workspace group
 
-**Content last reviewed on 2022-09-15**
+**Content last reviewed on 2022-10-25**
 
 This is the direction page for the Workspace group which is part of the [Manage stage](/direction/dev/index.html#manage) of the DevOps lifecycle and is responsible for the following categories: 
 
@@ -36,7 +36,7 @@ The video below contains a discussion with Sid on this topic outlining the probl
   <iframe src="https://www.youtube.com/embed/U8wTrxM35ow" frameborder="0" allowfullscreen="true"> </iframe>
 </figure>
 
-The video below gives a walkthrough of our MVC plan for Workspace
+The video below gives a walkthrough of our MVC plan for Workspace.
 
 <figure class="video_container">
   <iframe src="https://www.youtube.com/embed/BJ9XYpbzuoI" frameborder="0" allowfullscreen="true"> </iframe>
@@ -51,7 +51,7 @@ Today, GitLab's features exist at 3 levels:
 | Project | Features used at the project level. | [Requirements Management](https://docs.gitlab.com/ee/user/project/requirements/) |
 
 This leads to a few problems:
-* 3 ways to build a feature leads to follow-on requests to build a feature at some other level (see meta issues like [group level things](https://gitlab.com/gitlab-org/gitlab/-/issues/17836)) and additional engineering effort.
+* 3 ways to build a feature lead to follow-on requests to build a feature at some other level (see meta issues like [group level things](https://gitlab.com/gitlab-org/gitlab/-/issues/17836)) and additional engineering effort.
 * Restricts the audience, especially with instance-level features. Many of these features are admin-only, which is a tiny percentage of most users on an instance. If we make a feature instance level, we're locking ourselves into a few thousand self-managed users and locking out GitLab.com users.
 * Poor UX. Inconsistencies between the features available at the project and group levels create navigation and usability issues. Moreover, there isn't a dedicated place for instance-level features, so cool features like the Operations Dashboard and the Security Dashboard get relegated to the "More" dropdown in the top Navigation Bar.
 
@@ -78,7 +78,7 @@ Workspace is the name for the top-level group.
 
 <%= partial("direction/manage/workspace/templates/next") %>
 
-## Demo of introducing the new hierarchy concept for groups and projects for epics
+## Demo of introducing the new hierarchy concept for groups and projects for epics.
 
 <figure class="video_container">
   <iframe src="https://www.youtube.com/embed/fE74lsG_8yM" frameborder="0" allowfullscreen="true"> </iframe>
@@ -86,6 +86,6 @@ Workspace is the name for the top-level group.
 
 ## What is Not Planned Right Now
 
-* The Workspace team will not be responsible for migrating all features from a group or project to a namespace. We will [build a framework](https://gitlab.com/groups/gitlab-org/-/epics/6473) and document the process for features to be migrated. We'll then collaborate with the respective teams to migrate existing functionality to Namespace.
-* Since we're focused on merging groups and projects at this time, we don't plan to make significant improvements to them, as this would create redundant work.
+* The Workspace team will not be responsible for migrating all features from a group or project to a namespace. We will [build a framework](https://gitlab.com/groups/gitlab-org/-/epics/6473) and document the process for features to be migrated. We'll then collaborate with the respective teams to migrate existing functionality to namespace.
+* Since we're focused on merging groups and projects at this time, we don't plan to make significant improvements to them, as this would create redundant work. 
 * We are not planning to make improvements to users in the near term since the Workspace group's capacity will be dedicated to merging groups and projects.
