--- a/sites/uncategorized/source/blog/blog-posts/2022-10-25-gitlab-com-artifacts-cdn-change.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-25-gitlab-com-artifacts-cdn-change.html.md.erb
@@ -3,10 +3,10 @@ title: GitLab.com CI artifacts to use Google Cloud CDN
 author: Stan Hu
 author_gitlab: stanhu
 author_twitter: stanhu
-categories: company
-description: "GitLab.com CI artifacts will use the Google Cloud Content Delivery Network"
-tags: DevOps, inside GitLab, customers, integrations, runner, CI, CDN
-twitter_text: "GitLab.com CI artifacts to use Google Cloud #CDN"
+categories: news
+description: "GitLab CI users might benefit from faster downloads from edge caches closest to the user's location."
+tags: DevOps, inside GitLab, customers, integrations, CI
+twitter_text: "GitLab.com CI artifacts to use Google Cloud #CDN. Find out how this will impact GitLab CI users."
 featured: yes
 postType: announcement
 ---
@@ -16,7 +16,7 @@ to [Google Cloud CDN](https://cloud.google.com/cdn) instead of
 [Google Cloud Storage](https://cloud.google.com/storage). We anticipate that GitLab CI users may benefit from faster
 downloads from edge caches closest to your location.
 
-**Disclaimer** This blog contains information related to upcoming products, features, and functionality. It is important to note that the information in this blog post is for informational purposes only. Please do not rely on this information for purchasing or planning purposes. As with all projects, the items mentioned in this blog and linked pages are subject to change or delay. The development, release, and timing of any products, features, or functionality remain at the sole discretion of GitLab.
+**Disclaimer:** This blog contains information related to upcoming products, features, and functionality. It is important to note that the information in this blog post is for informational purposes only. Please do not rely on this information for purchasing or planning purposes. As with all projects, the items mentioned in this blog and linked pages are subject to change or delay. The development, release, and timing of any products, features, or functionality remain at the sole discretion of GitLab.
 
 ## How will this work?
 
