--- a/sites/handbook/source/handbook/engineering/development/ops/verify/pipeline-execution/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/ops/verify/pipeline-execution/index.html.md.erb
@@ -189,6 +189,7 @@ Development moves through workflow states in the following order:
  1. `workflow::verification`
  1. `workflow::awaiting security release` (if applicable)
  1. `workflow::production`
+ 1. `workflow::feature-flagged` (if applicable)
  1. `Closed`
 
 `workflow::planning breakdown` is driven by Product, but is a collaborative effort between Product, UX and Engineering. The steps for **planning breakdown** typically consists of:
@@ -203,6 +204,8 @@ At any point, if an issue becomes blocked, it would be in the `workflow::blocked
 `workflow::ready for development` means that an issue has been sufficiently [refined and weighted by Engineering](##how-engineering-refines-issues), upon request by Product and UX
 
 `workflow::awaiting security release` is applied by an engineer after the security issue has passed verification and this label signals that it is ready for production but awaiting the next [monthly security release](https://about.gitlab.com/handbook/engineering/security/#timing-of-the-monthly-security-release). When this label is applied, the issue's milestone should also be updated to the next milestone to align with when the next security release will happen.
+
+`workflow::feature-flagged` is applied to an issue that is being enabled through a separate feature flag rollout issue. Once the feature is validated the status is moved to `workflow::production` and the issue is closed.
  
 `Closed` means that all code changes associated with the issue are fully enabled on gitlab.com. If it is being rolled out behind a feature flag, it means the feature flag is enabled for all users on gitlab.com.
 
