edit to opener approved by stan

--- a/sites/uncategorized/source/blog/blog-posts/2022-10-25-gitlab-com-artifacts-cdn-change.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-25-gitlab-com-artifacts-cdn-change.html.md.erb
@@ -11,7 +11,7 @@ featured: yes
 postType: announcement
 ---
 
-Over the next month, requests for GitLab CI artifacts downloads may be redirected
+Over the next month and going forward, requests for GitLab CI artifacts downloads may be redirected
 to [Google Cloud CDN](https://cloud.google.com/cdn) instead of
 [Google Cloud Storage](https://cloud.google.com/storage). We anticipate that GitLab CI users may benefit from faster
 downloads from edge caches closest to your location.
