Adding nonuspayroll alias for payroll queries NL relocation

--- a/sites/handbook/source/handbook/people-group/relocation/index.html.md.erb
+++ b/sites/handbook/source/handbook/people-group/relocation/index.html.md.erb
@@ -273,7 +273,7 @@ Password: {{add new password}} > save
 - **A completed health declaration form, the vendor will provide this to you**.
 1. Details on that process can be found under the BSN number section on the [visas page](/handbook/people-group/visas/#bsn-number) in the handbook.
 - **Once the approved Visa and 30% ruling is received by the team member, the team members should email this to PeopleOps for filing in Workday.**
-1. Sometimes the BSN might not be ready for the first Payroll, if this happens team members can still be on the Dutch Payroll, it just means the highest rate of tax will apply for this period. Any over paid tax can be claimed back via [a year end tax return](https://www.government.nl/topics/income-tax/filing-a-tax-return). 
+1. Sometimes the BSN might not be ready for the first Payroll, if this happens team members can still be on the Dutch Payroll, it just means the highest rate of tax will apply for this period. Any over paid tax can be claimed back via [a year end tax return](https://www.government.nl/topics/income-tax/filing-a-tax-return). When you receive your BSN please ensure to add to your Workday profile and email nonuspayroll@gitlab.com to let them know. Any Payroll queries should be directed to nonuspayroll@gitlab.com
 1. The People Connect team completes [Tasks for People Connect](https://about.gitlab.com/handbook/people-group/relocation/#tasks-for-people-connect-1) as described in above relocation process.
 
 ** Review [best practices](https://about.gitlab.com/handbook/people-group/contracts-probation-periods/#netherlands-renewal-process) for The Netherlands contracts **
