added cover image

--- a/sites/uncategorized/source/blog/blog-posts/2022-10-25-gitlab-com-artifacts-cdn-change.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-25-gitlab-com-artifacts-cdn-change.html.md.erb
@@ -6,6 +6,7 @@ author_twitter: stanhu
 categories: news
 description: "GitLab CI users might benefit from faster downloads from edge caches closest to the user's location."
 tags: DevOps, inside GitLab, customers, integrations, CI
+image_title: '/images/blogimages/ESA_case_study_image.jpg'
 twitter_text: "GitLab.com CI artifacts to use Google Cloud #CDN. Find out how this will impact GitLab CI users."
 featured: yes
 postType: announcement
