--- a/sites/handbook/source/handbook/engineering/infrastructure/team/reliability/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/infrastructure/team/reliability/index.html.md.erb
@@ -61,9 +61,9 @@ We maintain a single source of truth epic for all work underway for the Reliabil
 
  * Build, maintain, and improve observability services.
  * Provide long term improvements to observability services.
- * Services: Prometheus, Thanos, Grafana, [Logging](https://gitlab.com/gitlab-com/runbooks/-/tree/master/docs/logging), 
+ * Services: Prometheus, Thanos, Grafana, [Logging](https://gitlab.com/gitlab-com/runbooks/-/tree/master/docs/logging) 
  * Examples:
- 	* [Prometheus Service Issues
+ 	 * [Prometheus Service Issues
 ](https://gitlab.com/gitlab-com/gl-infra/reliability/-/issues/?label_name%5B%5D=Service%3A%3APrometheus)
    * [Thanos Service Issues](https://gitlab.com/gitlab-com/gl-infra/reliability/-/issues/?sort=updated_desc&state=opened&label_name%5B%5D=Service%3A%3AThanos&first_page_size=100)
    * [Elastic Search Service Issues](https://gitlab.com/gitlab-com/gl-infra/reliability/-/issues/?label_name%5B%5D=Service%3A%3AElasticsearch)
@@ -73,7 +73,7 @@ We maintain a single source of truth epic for all work underway for the Reliabil
   * Assist customers with infrastructure related application support.
   * Services and Tools: [GKE / K8s Workloads](https://gitlab.com/gitlab-com/gl-infra/k8s-workloads), Chef, Terraform, Vault, Edge Services (Load Balancing, DNS, CDN)
   * Examples:
-   * [Sev1/2 Corrective Actions](https://gitlab.com/gitlab-com/gl-infra/reliability/-/boards/3164592?label_name%5B%5D=corrective%20action)
+    * [Sev1/2 Corrective Actions](https://gitlab.com/gitlab-com/gl-infra/reliability/-/boards/3164592?label_name%5B%5D=corrective%20action)
    	* [OS Upgrades](https://gitlab.com/gitlab-com/gl-infra/reliability/-/issues/15029)
    	* [Security Patching](https://gitlab.com/gitlab-com/gl-infra/production/-/issues/6605)
    	* [General Requests from the backlog](https://gitlab.com/groups/gitlab-com/gl-infra/-/epics/592) that DO NOT require a dedicated project squad.
