Update Plan: Certify Product Direction Page, October 2022

--- a/source/direction/plan/certify/index.html.md.erb
+++ b/source/direction/plan/certify/index.html.md.erb
@@ -10,7 +10,7 @@ canonical_path: "/direction/plan/certify/"
 
 ## Certify Group
 
-**Last Updated:** 2022-09-19
+**Last Updated:** 2022-10-24
 
 This is the direction page for the Certify group, which is part of the [Plan stage](/direction/plan/) of the DevOps life cycle and is resposible for the following categories:
 
@@ -25,12 +25,13 @@ This is the direction page for the Certify group, which is part of the [Plan sta
 <%= direct_team(manager_role: 'Fullstack Engineering Manager, Plan:Certify') %>
 <%= stable_counterparts(role_regexp: /[,&] (Plan(?!:)|Plan:Certify)/) %>
 
-
 ### What are we working on and why
 
-*The Certify team is migrating existing requirements data and awaiting the Work Items implementation before migrating Requirements to the new Work Item standard. As this effort is evolving, we have prioritized rolling out our [confidential notes MVC](https://gitlab.com/groups/gitlab-org/-/epics/7407). We believe that this update will add significant value across all issues and epics, as well as greatly benefit Service Desk functionality.*
+*The Certify team is continuing the (migration of Requirements to a Work Item type) [https://gitlab.com/groups/gitlab-org/-/epics/8371]. This work is part of a broader initiative in Plan to create better connectiviety between Work Items.
 
-Given the surface area of the Certify team, aggressive prioritization is necessary. As such, the following is a breakdown of our current level of effort spent on each category and why.
+For (15.6) [https://gitlab.com/gitlab-org/plan/-/issues/710] Certify is working on enhancing visibility access controls for internal notes, and enabling filtering capabilities for requirement Work Items by status on GraphQL. Certify is also working on resolving several bugs and maintenance requests, all of which can be viewed in the 15.6 Release Planning Issue.
+
+Certify covers a broad area, which requires aggressive prioritization. The following is a breakdown of our current level of effort spent on each category and why.
 
 #### Requirements Management: Allocation: 65+%
 
