--- a/sites/handbook/source/handbook/product/ux/stage-group-ux-strategy/ci-cd/pipeline-execution/index.html.md.erb
+++ b/sites/handbook/source/handbook/product/ux/stage-group-ux-strategy/ci-cd/pipeline-execution/index.html.md.erb
@@ -14,26 +14,22 @@ description: "A documentation of the practices, objectives, achievements and pla
 
 The [Verify:Pipeline Execution Group](/handbook/engineering/development/ops/verify/pipeline-execution/) is focused on all the functionality with respect to Pipeline Execution, as part of [GitLab Continuous Integration](/stages-devops-lifecycle/continuous-integration/). This UX team is responsible for the following categories:
 
-- **[Continuous Integration](/direction/verify/continuous_integration/)**: Making it easy to run a pipeline is our first focus and this applies to both running a pipeline manually as well as triggering one automatically when submitting a code commit or a merge request. In addition, we want to provide data for examining your pipeline's performance, so that you can optimize CI configurations to make your pipelines run more efficiently.
-- [**Continuous Integration Scaling**](/direction/verify/continuous_integration_scaling/): In FY22, we have committed to SaaS First. In the Verify Stage, this means prioritizing the scale of Continuous Integration and ensuring our users on GitLab.com are leveraging a reliable and available service. 
-- [**Merge Trains**](/direction/verify/merge_trains/): A merge train is a queued list of merge requests waiting to be merged into the target branch. The changes in each merge request are combined with the changes in earlier merge requests and tested before merge.
+- **[Continuous Integration](/direction/verify/continuous_integration/)**: Making it easy to run a pipeline is our first focus in this category and this applies to both running a pipeline manually as well as triggering one automatically when submitting a code commit or a merge request. In addition, we want to provide pipeline performance data for faster debugging of a pipeline.
+- [**Continuous Integration Scaling**](/direction/verify/continuous_integration_scaling/): In FY23 a top priority for us is [SaaS First](/direction/enablement/#saas-first). In the Verify Stage, this means prioritizing the scale of Continuous Integration and ensuring our users on GitLab.com are leveraging a reliable and available service. We are focused on a goal of 20M builds per day as it represents not only a target to drive our future architecture, but a volume that we expect to achieve within several quarters.
+- [**Merge Trains**](/direction/verify/merge_trains/): When merge trains are used, each merge request joins as the last item in that train. Each merge request is processed in order and is added to the merge result of the last successful merge request. The merge request adds its changes, and starts the pipeline immediately under the assumption that everything is going to pass. If the merge request fails, it is kicked out of the train and the next merge request continues the pipeline of the last successful merge result. 
 
 ## Pipeline Execution UX Plan
 
 ### Vision for categories under Pipeline Execution
-- **[Continuous Integration](/direction/verify/continuous_integration/)**: Looking to the future, we have plans to help you better monitor and understand your pipeline [epic#4794](https://gitlab.com/groups/gitlab-org/-/epics/4794). Having details about pipeline activities (such as job duration) will allow you to see and react to what's happening while your pipeline is running. Beyond using data simply for reactive purposes, we have plans for a customisable UI for historical pipelines analytics so you can see the trends that will guide your planning and decision making.
+- **[Continuous Integration](/direction/verify/continuous_integration/)**: 
+  - We are working on [Improving the performance of the pipeline list view](https://gitlab.com/groups/gitlab-org/-/epics/9053).
+  - To enable GitLab SaaS users to set CI/CD Minute quotas on projects as self-managed namespace admins can, we are working on the design proposal for [Configure CI/CD Quotas by project](https://gitlab.com/gitlab-org/gitlab/-/issues/357760).
+  - The [CI_JOB_TOKEN](https://docs.gitlab.com/ee/ci/jobs/ci_job_token.html) makes it intuitive to access the GitLab API from within jobs to enable advanced automation. To enhance the security of this short lived token we will let project maintainers set which projects can use the token to interact with their project with the [next phase](https://gitlab.com/groups/gitlab-org/-/epics/6546#phase-11-ci_job_token-can-be-used-for-use-cases-like-dependabot-without-worrying-about-tokens-leaking-get-data-about-which-projects) of the CI_JOB_TOKEN workflows epic.
 
-We'd love to create a holistic approach to automatically merging when pipelines succeed via [gitlab#8128](https://gitlab.com/gitlab-org/gitlab/-/issues/8128), which offers great collaboration between [Code Review](/direction/create/code_review/) and Continuous Integration. 
+- **[Merge Trains](/direction/verify/merge_trains/)**: For an overview of our plans for Merge Trains, see epic [Merge Trains Vision](https://gitlab.com/groups/gitlab-org/-/epics/5122) 
 
-- [Merge Trains](/direction/verify/merge_trains/): Our top vision item is [Merge Trains should support fast forward merge](https://gitlab.com/gitlab-org/gitlab/issues/35628) as this will eliminate the
-frequent need for manually rebasing. We have heard from many developers that a large portion of their day is dedicated to this activity, and with this functionality, Merge Trains will take care of this for them.  
+- **[CI Scaling maturity evaluation plan](https://gitlab.com/groups/gitlab-org/-/epics/8597)** (This epic is confidential) [Planned iterations](https://docs.gitlab.com/ee/architecture/blueprints/ci_data_decay/pipeline_partitioning.html#iterations)
 
-### Ongoing Initiatives
-
-In FY23-Q1, we are focused on improving the SUS score of the product by working on the following issues:
-- [14.9 UX tracking issue](https://gitlab.com/gitlab-org/gitlab/-/issues/351574)
-- [14.10 UX tracking issue](https://gitlab.com/gitlab-org/gitlab/-/issues/351575)
-- [15.0 UX tracking issue](https://gitlab.com/gitlab-org/gitlab/-/issues/351576)
 
 ## How we work
 
@@ -63,9 +59,10 @@ The UX Debt and UI Polish issues for CI are tracked in [this epic](https://gitla
 |-------|-------|-----------------------|
 | [Simplify merge strategies with `Auto merge`](https://gitlab.com/groups/gitlab-org/-/epics/6687) | Merge Widget, Settings Page | `group::source code` `group::code review` |
 | [Removing user access to Shared Runners UI](https://gitlab.com/gitlab-org/gitlab/-/issues/35346/) | Admin controls | `group::runner` |
-| [Provide visibility for shared runner usage for user namespaces](https://gitlab.com/gitlab-org/gitlab/-/issues/345795) | Merge widget | `group::runner` |
-| [Categorize Permissions](https://gitlab.com/gitlab-org/gitlab/-/issues/281169) | RBAC/User access | `group::AUthentication and authorization`  |
-| [Re-organize merge strategy/checks options on settings page](https://gitlab.com/gitlab-org/gitlab/-/issues/340393) | Project and Group Settings >> General | `group::source code` |
+| [Define the runner settings workflow for users with blocked shared runner access](https://gitlab.com/gitlab-org/gitlab/-/issues/350714) | Users with stuck pipeline due to interrupted shared runner access | `group::runner` |
+| [Provide a breakdown of jobs for a runner rather than total job count](https://gitlab.com/gitlab-org/gitlab/-/issues/378639) | Runner list view | `group::runner` |
+| [MVC: Configure CI/CD Quotas by project](https://gitlab.com/gitlab-org/gitlab/-/issues/357760/) | Settings >> CI/CD | `group::fulfilment` |
+| [Configure CI/CD Quotas by project under groups](https://gitlab.com/gitlab-org/gitlab/-/issues/362287) | Settings >> CI/CD | `group::fulfilment` |
 
 ### Merge Request Reviews
 The development merge requests get assigned to a product designer by the [GitLab Roulette](/handbook/product/ux/product-designer/mr-reviews/#how-to-assign-mr-reviews). We follow the standard guidelines for the [reviewing process and hand-off](/handbook/product/ux/product-designer/mr-reviews/#workload-and-response-times) as well. 
