--- a/sites/handbook/source/handbook/teamops/informed-decisions/index.html.md.erb
+++ b/sites/handbook/source/handbook/teamops/informed-decisions/index.html.md.erb
@@ -1,8 +1,8 @@
 ---
 layout: handbook-page-toc
-title: "Informed decisions — TeamOps"
+title: "Shared reality — TeamOps"
 canonical_path: "/handbook/teamops/informed-decisions/"
-description: Informed decisions — TeamOps
+description: Shared reality — TeamOps
 twitter_image: "/images/opengraph/all-remote.jpg"
 twitter_image_alt: "GitLab remote team graphic"
 twitter_site: "@gitlab"
