--- a/sites/handbook/source/handbook/teamops/executing-decisions/index.html.md.erb
+++ b/sites/handbook/source/handbook/teamops/executing-decisions/index.html.md.erb
@@ -1,7 +1,7 @@
 ---
 layout: handbook-page-toc
-title: "Executing decisions — TeamOps"
-description: Executing decisions — TeamOps
+title: "Measurement clarity — TeamOps"
+description: Measurement clarity — TeamOps
 twitter_image: "/images/opengraph/all-remote.jpg"
 twitter_image_alt: "GitLab remote team graphic"
 twitter_site: "@gitlab"
@@ -20,9 +20,11 @@ twitter_creator: "@gitlab"
 This page is about one of the four Guiding Principles of TeamOps. Get immersed in a [complete overview of TeamOps](/teamops/), or jump straight into the free [TeamOps Practitioner Certification](https://levelup.gitlab.com/learn/course/teamops). 
 
 
-# Teams exist to deliver results
+# Measurement clarity 
 
-This is about achieving objectives. Being more informed, making faster decisions, and increasing decision making velocity is only useful if you execute and deliver results. TeamOps empowers ***everyone*** to contribute to meaningful business outcomes. It also recognizes that execution ***is not a one-time event***; rather, it is the establishing of a new baseline on which future iterations are applied.
+This is about achieving objectives and understanding what you're measuring. TeamOps enables higher frequency measurements, clear owners, high accountability, and wide-reaching communication.   
+
+Being more informed, making faster decisions, and increasing decision making velocity is only useful if you execute and measure outputs (not inputs). TeamOps empowers ***everyone*** to contribute to meaningful business outcomes. It also recognizes that execution ***is not a one-time event***; rather, it is the establishing of a new baseline on which future iterations are applied.
 
 Action tenets and real-world examples are below.
 
@@ -44,29 +46,8 @@ In organizations powered by TeamOps, all team members focus on [executing busine
 
 A cross-functional effort was required to produce the `10 Years of GitLab` integrated marketing campaign and [associated website](/ten/). A GitLab issue was established to explicitly define [elements to be tracked and measured](https://gitlab.com/gitlab-com/marketing/corporate_marketing/corporate-marketing/-/issues/5507) in order to provide an impact report. By focusing on results over hours spent (or if a given team member was online at a certain time, or in a certain office), everyone involved in the project can focus energy on execution. 
 
-## Give agency
 
-Masterful execution [requires agency to be given](/handbook/values/#give-agency) by default. Micromanaging stifles execution, but agency *empowers* an individual to focus their time and attention on what they deem best. 
 
-**Here's an example**: [Normalizing that it's OK to look away in video calls](/company/culture/all-remote/meetings/#9-its-ok-to-look-away)
-
-Giving agency begins in the most typical of places. Video calls are a natural part of day-to-day work for many knowledge workers, yet cultural expectations about presenteeism and attentiveness may restrict agency. GitLab explicitly documents that [it's OK to look away](/company/culture/all-remote/meetings/#9-its-ok-to-look-away) during meetings and that no one should be embarrassed to occasionally ask for something to be repeated. By creating a culture where people are free to manage their own time and attention, they're able to direct energy on a minute-by-minute basis to execute. No one's path to execution looks the same. It may involve breaks to connect with friends, taking a walk outside, or watching a recording of a meeting during a more suitable time. 
-
-## Bias for action
-
-Execution is accelerated when a team maintains a [bias for action](/handbook/values/#bias-for-action) as opposed to alternatives like alignment and consensus. When facing decisions that may involve imperfect information or failures, having a bias for action ensures a more rapid pace of execution. This does require a tolerance for mistakes and an appreciation for [two-way door decisions](/handbook/values/#make-two-way-door-decisions), an operating principle linked to [Fast Decisions](/handbook/teamops/fast-decisions/#two-way-door-decisions). 
-
-**Here's an example**: [Coursera Remote Work course development](https://gitlab.com/groups/gitlab-com/marketing/-/epics/1128)
-
-In September 2020, much of the knowledge-working world began to seek training on how to manage remote teams. As the COVID-19 pandemic forced many teams to work primarily from home, GitLab was well-positioned to provide proven practices for others to learn from and contribute back to. [Jessica R.](https://gitlab.com/jessicareeder)'s bias for action led to a question: "*What if we partner with a leader in online learning to teach the world a skill that it needs right now?*" This [GitLab epic](https://gitlab.com/groups/gitlab-com/marketing/-/epics/1128) is a case study in execution, sparked by a bias for action. Every iteration is documented. The output is [How to Manage a Remote Team](https://www.coursera.org/learn/remote-team-management), a free-to-take course on Coursera with 40,000 learners (and growing!). 
-
-## Boring solutions
-
-In conventional organizations, the fanciest solution may receive the most support. In organizations powered by TeamOps, the most boring solutions are celebrated. There's an art to not overthinking a problem, and lowering one's ego in order to use established, boring solutions already in the market. 
-
-**Here's an example**: [Extend GitLab.com status page with key metrics](https://gitlab.com/groups/gitlab-com/gl-infra/-/epics/698)
-
-A GitLab team member sought to [safely publicize key metrics for the benefit of the GitLab.com user base](https://gitlab.com/groups/gitlab-com/gl-infra/-/epics/698). Rather than defaulting to a proposal where new technology was to be built, [Joshua L.](https://gitlab.com/joshlambert) proposed a boring solution: use `status.io` for the status page. "This is the most boring solution," Joshua states, "and it presents the metrics on the page we already direct users to for the status."
 
 
 ## Transparent measurements
@@ -94,13 +75,6 @@ Executing on a decision is not binary. It is also not a one-time event. TeamOps 
 
 In a conventional organization, a revised homepage could be seen as binary. It's either complete, or not. [This merge request](https://gitlab.com/gitlab-com/www-gitlab-com/-/merge_requests/69665/) details a minimum viable change (MVC) to add one element to the [GitLab for Education](/solutions/education/) homepage. In the comment thread, GitLab team members agree that this iteration moves the page one step closer to an ideal state. By embracing and celebrating each iteration *as* execution, it enables team members to accelerate execution on other projects rather than being stuck on a prior project.  
 
-## Single source of truth (SSoT)
-
-Having multiple sources of truth slows a team's ability to deliver results. Executing on decisions happens much faster when there is a [single source of truth](/handbook/values/#single-source-of-truth). TeamOps empowers everyone to contribute status updates and improvements within an agreed-upon documentation system (the [handbook](/handbook/handbook-usage/) at GitLab; mediums such as [Almanac](https://almanac.io/), [Guru](https://www.getguru.com/), and [Notion](https://www.notion.so/) for other organizations). Honoring the single source of truth begins at the earliest stage of execution.
-
-**Here's an example**: [Establishing a SSoT for dates and time zones at GitLab](https://gitlab.com/gitlab-com/www-gitlab-com/-/merge_requests/107060)
-
-Several GitLab team members recognized that there were competing sources of truth for communicating dates and time zones in the company handbook. The discussion began as a Slack thread and quickly [moved to a merge request](https://gitlab.com/gitlab-com/www-gitlab-com/-/merge_requests/107060) where execution could occur. Crisp communication is critical to executing decisions, especially in a distributed workplace where synchronous engagements are more rare and work spans numerous time zones. 
 
 ## Prioritize due dates over scope
 
@@ -112,13 +86,6 @@ A TeamOps organization will always [set a due date](/handbook/values/#set-a-due-
 
 As of April 30, 2022, GitLab has shipped a monthly product release for [127 consecutive quarters](https://ir.gitlab.com/news-releases/news-release-details/gitlab-reports-first-quarter-fiscal-year-2023-financial-results). That's over 10 years! A decade of [consistent execution](/blog/2018/11/21/why-gitlab-uses-a-monthly-release-cycle/) is made possible by [cutting scope](/handbook/values/#set-a-due-date) instead of pushing ship dates. 
 
-## Disagree, commit, and disagree
-
-"Disagree and commit" has become a somewhat commonly understood phrase in professional settings. In an organization powered by TeamOps, a second "disagree" is added to form "[Disagree, commit, and disagree](/handbook/values/#disagree-commit-and-disagree)." This mentality empowers everyone to contribute to change without slowing down the pace of execution. In the more conventional "disagree and commit" framework, execution is encouraged but contributions to future iterations are limited. By explicitly stating that team members are expected to execute (commit) while a decision stands, but are welcome to disagree, it invites everyone to constructively surface dissent and potential proposals for change. 
-
-**Here's an example**: [Require seniors to become maintainers](https://gitlab.com/gitlab-com/www-gitlab-com/-/merge_requests/106942)
-
-A GitLab merge request details a policy change to "[increase maintainers by requiring senior engineers to become a maintainer in at least one project/area](https://gitlab.com/gitlab-com/www-gitlab-com/-/merge_requests/106942)." 57 team members participated in discussion within the merge request itself, and the DRI for the change confirms in the description that "in a recent survey, 11% of respondents did not want to become a maintainer, and 35% disagreed that it should be a senior+ responsibility." Despite the disagreement, the iteration was merged and thus, a decision was made. Thanks to the operating principle "Disagree, commit, and disagree," anyone is welcome to disagree with the change and influence the next iteration through constructive conversation with the DRI. 
 
 ## Key Review meetings
 
@@ -128,13 +95,6 @@ A GitLab merge request details a policy change to "[increase maintainers by requ
 
 GitLab User Experience (UX) department [livestreamed a Key Review meeting on GitLab Unfiltered](https://youtu.be/54LAX8UFU9s). A distinct element of these meetings is that [no presentations are allowed](/handbook/communication/#no-presenting-in-meetings). For context, each attendee was able to view a presentation prepared ahead of time, with a shared Google Doc agenda used to maintain an orderly and inclusive flow of questions and conversation. You'll notice that executives and their direct reports provide questions and suggestions throughout. There's a distinct conversation on usability beginning at the 13:51 mark where leads from various functions [contribute to improved execution on a 25-second lag recognized in the product](https://youtu.be/54LAX8UFU9s?t=831). 
 
-## Group Conversations
-
-Group Conversations are recurring 25 minute meetings providing regular updates across all GitLab teams on a rotating schedule. It's the same concept and content as the Key Review meeting mentioned above, with one major difference: *all* team members are invited! These meetings are designed to give people context on what other teams outside of their own are focused on (and how they're executing). Execution isn't solely about executing your goals, but also understanding what others are executing. 
-
-**Here's an example**: [Learning and Development Group Conversation](https://youtu.be/OX15Rknk7tM)
-
-GitLab's Learning and Development team hosted a [livestreamed Group Conversation](https://youtu.be/OX15Rknk7tM) in June 2021. [No presentations are allowed](/handbook/communication/#no-presenting-in-meetings) in Group Conversations. Attendees look at the prepared presentation deck in advance and document questions in a shared Google Doc. At the 6:35 mark, an attendee (who is sharing their screen) [notices that a button does not link to the appropriate place](https://youtu.be/OX15Rknk7tM?t=395). This enables the L&D team to create an action item, plan an iteration, and continue to execute on their OKRs/KPIs. 
 
 ## Stable counterparts
 
