--- a/sites/handbook/source/handbook/teamops/many-decisions/index.html.md.erb
+++ b/sites/handbook/source/handbook/teamops/many-decisions/index.html.md.erb
@@ -1,8 +1,8 @@
 ---
 layout: handbook-page-toc
-title: "Decisions are the fuel for high-performance teams — TeamOps"
+title: "Decision velocity — TeamOps"
 canonical_path: "/handbook/teamops/many-decisions/"
-description: Decisions are the fuel for high-performance teams — TeamOps
+description: Decision velocity — TeamOps
 twitter_image: "/images/opengraph/all-remote.jpg"
 twitter_image_alt: "GitLab remote team graphic"
 twitter_site: "@gitlab"
@@ -24,7 +24,7 @@ This page is about one of the four Guiding Principles of TeamOps. Get immersed i
 
 Conventional management philosophies often strive for consensus and avoid risk instead of developing a bias for action. This can result in slow decision-making. 
 
-In TeamOps, success is correlated with decision velocity: the quantity of decisions made in a particular stretch of time (e.g. month, quarter) and the results that stem from faster progress.
+In TeamOps, success is correlated with **decision velocity**: the quantity of decisions made in a particular stretch of time (e.g. month, quarter) and the results that stem from faster progress.
 
 Action tenets and real-world examples are below. 
 
@@ -39,6 +39,22 @@ Feedback should be documented transparently. The DRI must review all feedback, b
 **Here's an example:** [Implementing a replacement program for GitLab Contribute in FY23](https://gitlab.com/gitlab-com/www-gitlab-com/-/merge_requests/107700)
 
 GitLab cancelled its FY23 Contribute event due to COVID risk posed to team members from a large, global event. Many decisions were necessary in order to implement a replacement initiative. This principle enabled the DRI (Directly Responsible Individual) to ingest a lot of thoughtful feedback in a [Manager Mention Merge Request for a FY23-Q3 Visiting Grant Program](https://gitlab.com/gitlab-com/www-gitlab-com/-/merge_requests/107700). Although not every comment was replied to, everyone at the company was able to contribute feedback. Ultimately, the feedback was addressed and decisions were made in a 25-minute sync session, enabling GitLab team members to start planning their FY23-Q3 travel plans. 
+
+## Give agency
+
+Masterful execution [requires agency to be given](/handbook/values/#give-agency) by default. Micromanaging stifles execution, but agency *empowers* an individual to focus their time and attention on what they deem best. 
+
+**Here's an example**: [Normalizing that it's OK to look away in video calls](/company/culture/all-remote/meetings/#9-its-ok-to-look-away)
+
+Giving agency begins in the most typical of places. Video calls are a natural part of day-to-day work for many knowledge workers, yet cultural expectations about presenteeism and attentiveness may restrict agency. GitLab explicitly documents that [it's OK to look away](/company/culture/all-remote/meetings/#9-its-ok-to-look-away) during meetings and that no one should be embarrassed to occasionally ask for something to be repeated. By creating a culture where people are free to manage their own time and attention, they're able to direct energy on a minute-by-minute basis to execute. No one's path to execution looks the same. It may involve breaks to connect with friends, taking a walk outside, or watching a recording of a meeting during a more suitable time. 
+
+## Bias for action
+
+Execution is accelerated when a team maintains a [bias for action](/handbook/values/#bias-for-action) as opposed to alternatives like alignment and consensus. When facing decisions that may involve imperfect information or failures, having a bias for action ensures a more rapid pace of execution. This does require a tolerance for mistakes and an appreciation for [two-way door decisions](/handbook/values/#make-two-way-door-decisions), an operating principle linked to [Fast Decisions](/handbook/teamops/fast-decisions/#two-way-door-decisions). 
+
+**Here's an example**: [Coursera Remote Work course development](https://gitlab.com/groups/gitlab-com/marketing/-/epics/1128)
+
+In September 2020, much of the knowledge-working world began to seek training on how to manage remote teams. As the COVID-19 pandemic forced many teams to work primarily from home, GitLab was well-positioned to provide proven practices for others to learn from and contribute back to. [Jessica R.](https://gitlab.com/jessicareeder)'s bias for action led to a question: "*What if we partner with a leader in online learning to teach the world a skill that it needs right now?*" This [GitLab epic](https://gitlab.com/groups/gitlab-com/marketing/-/epics/1128) is a case study in execution, sparked by a bias for action. Every iteration is documented. The output is [How to Manage a Remote Team](https://www.coursera.org/learn/remote-team-management), a free-to-take course on Coursera with 40,000 learners (and growing!). 
 
 ## Push decisions to the lowest possible level
 
