Add carlocatimbang to the PI triage schedule

--- a/sites/handbook/source/handbook/engineering/development/analytics/product-intelligence/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/analytics/product-intelligence/index.html.md.erb
@@ -508,6 +508,7 @@ Answer by pointing to the appropriate handbook page or other GitLab team member 
 | Oct 17 - Oct 23  | `@nbelokolodov` |
 | Oct 24 - Oct 30  | `@michold` |
 | Oct 31 - Nov 6  | `@pskorupa` |
+| Nov 7 - Nov 13  | `@carlocatimbang` |
 
 
 ## Team Meetings
