--- a/sites/uncategorized/source/blog/blog-posts/2022-10-25-the-ultimate-guide-to-sboms.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-10-25-the-ultimate-guide-to-sboms.html.md.erb
@@ -5,7 +5,7 @@ author_gitlab: sgittlen
 author_twitter: sandragwrites
 categories: security
 tags: security, DevSecOps, compliance, open source
-description: Learn what a software bill of materials is and why it is important.
+description: Learn what a software bill of materials is and why it has become an integral part of modern software development.
 image_title: /images/blogimages/blog-compliance.jpg
 twitter_text: Need to get up to speed on SBOMs quickly? We've got you covered
   with our comprehensive guide
